# fontgit

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/fontGit/: __init__.py  utils.py
src/fontGit/objects/: font.py  glyph.py  layer.py  layerSet.py
tests/: conftest.py  readme.md  test_font.py  test_utils.py
